--- a/src/main/resources/templates/backend/partials/fragment.html
+++ b/src/main/resources/templates/backend/partials/fragment.html
@@ -289,7 +289,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/backend/restaurant}">
+            <a class="nav-link" href="#">
               <i class="icon-flag menu-icon"></i>
               <span class="menu-title">餐廳管理</span>
             </a>
