--- a/src/main/resources/templates/frontend/car/car-location.html
+++ b/src/main/resources/templates/frontend/car/car-location.html
@@ -56,7 +56,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="pos-relative hov-img0 card-img-left">
-										<img th:src="@{/data/uploadimages/car/default-map.jpg}" style="height: 100%" alt="IMG-CAR">
+										<img th:src="@{${location.image}}" style="height: 210px; object-fit: cover" alt="IMG-CAR">
 									</div>
 								</div>
 								<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
