--- a/src/main/resources/templates/backend/comment-list.html
+++ b/src/main/resources/templates/backend/comment-list.html
@@ -119,23 +119,30 @@
 				</div>
 				
 				<!-- Modal -->
+				<div id="itemModal"></div>
 				<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog" role="document">
-				    <div class="modal-content">
-				      <div class="modal-header">
-				        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				          <span aria-hidden="true">&times;</span>
-				        </button>
-				      </div>
-				      <div class="modal-body">
-				        ...
-				      </div>
-				      <div class="modal-footer">
-				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				        <button type="button" class="btn btn-primary">Save changes</button>
-				      </div>
-				    </div>
+				  	<div class="row">
+				  		<div class="col-10">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <h5 class="modal-title" id="exampleModalLabel">商品快照</h5>
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						          <span aria-hidden="true">&times;</span>
+						        </button>
+						      </div>
+						      <div class="modal-body">
+						        ...
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						        <button type="button" class="btn btn-primary">Save changes</button>
+						      </div>
+						    </div>
+				  		
+				  		
+				  		</div>
+				  	</div>
 				  </div>
 				</div>
 				
@@ -187,9 +194,13 @@
 	 			})
 		})
 			
-			
+	
+		
+		
+		
 	$('.js-show-modal-item').on('click',function(e){
         e.preventDefault();
+        
         $('.js-modal-item').addClass('show-modal1');
     });
 
