--- a/src/main/resources/templates/frontend/car/vendor-opt-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-opt-form.html
@@ -49,21 +49,34 @@
 				<div class="col-md-9 grid-margin my-5 pl-5">
 					<div class="card">
 						<div class="card-body ">
+						
 							<h4 class="card-title font-weight-bold">租車選項</h4>
+							
 							<form id="insertForm" name="form" th:action="@{/vendor/cars/options}" method="post" th:object="${carLocation}"
 								  class="form-horizontal needs-validation">
-								<input th:field="*{id}" id="id" type="text"/>
+								  
+								<input th:field="*{id}" id="id" type="hidden"/>
+								
 								<div th:each="option, optionStat : *{carOptions}">
+								
 									<p class="card-description mt-4">車款資料</p>
+									
+									<!-- 隱藏的方案與車款id -->
 									<input th:field="*{carOptions[__${optionStat.index}__].id}" id="name" type="hidden" class="form-control" />
+									<input th:field="*{carOptions[__${optionStat.index}__].carModel.id}" id="name" type="hidden" class="form-control" />
+
+									
 									<div class="row form-group my-4">
 										<div class="col-lg-1"></div>
-										<label class="col-lg-2 col-form-label" for="name">車款Id</label>
+										<label class="col-lg-2 col-form-label" for="name">車款</label>
 										<div class="col-lg-6">
-											<input th:field="*{carOptions[__${optionStat.index}__].carModel.id}" id="name" type="number" class="form-control" />
+											<span th:text="*{carOptions[__${optionStat.index}__].carModel.makeCh}" id="name"></span>
+											<span th:text="*{carOptions[__${optionStat.index}__].carModel.makeEn}" id="name"></span>
+											<span th:text="*{carOptions[__${optionStat.index}__].carModel.model}" id="name"></span>
 											<div class="invalid-feedback">請選擇車款</div>
 										</div>
 									</div>
+									
 									<div class="row form-group my-4">
 										<div class="col-lg-1"></div>
 										<label class="col-lg-2 col-form-label" for="name">車款</label>
