--- a/src/main/resources/templates/frontend/index.html
+++ b/src/main/resources/templates/frontend/index.html
@@ -47,7 +47,7 @@
                 <div class="block1 wrap-pic-w">
                     <!-- <img src="images/banner-03.jpg" alt="IMG-BANNER"> -->
 
-                    <a th:href="@{/restaurant}"
+                    <a href="#"
                        class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-35 p-tb-25 trans-03 respon3">
                         <div class="block1-txt-child1 flex-col-l">
 								<span class="block1-name mtext-111 trans-04 p-b-6 font-weight-bold">
