--- a/src/main/resources/templates/frontend/hotel/hotel-index.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
+<style>
+    .btn1 {
+        background: mediumpurple;
+        width: 150px;
+        color: white;
+        border-radius: 5px;
+        font-size: 15px;
+        text-align: center;
+    }
+</style>
 <head th:replace="frontend/partials/fragment :: head"></head>
 
 <body class="">
@@ -56,7 +65,6 @@
                     <div class="card-body">
                         <h4 class="card-title font-weight-bold">飯店＆房間列表</h4>
                         <h6 class="card-title font-weight-bold">預計放房間</h6>
-
                         <div class="p-t-20">
                             <table id="data-table" class="display table table-hover w-100" style="text-align: center">
                                 <thead>
@@ -66,42 +74,25 @@
                                     <th scope="col" class="text-center">價格</th>
                                     <th scope="col" class="text-center">容納人數</th>
                                     <th scope="col" class="text-center">地址</th>
-                                    <!-- 											<th scope="col">電話</th> -->
-                                    <!-- 											<th scope="col">營業時間</th> -->
                                     <th scope="col" class="text-center">房間數</th>
-                                    <th scope="col" class="text-center">資訊/修改</th>
+                                    <th scope="col" class="text-center">修改</th>
+                                    <th scope="col" class="text-center">刪除</th>
+                                    <th scope="col" class="text-center">新增房間</th>
                                 </tr>
                                 </thead>
                                 <tbody id="tbody">
-                                <tr th:each="location:${carLocations}" class="odd gradeX" scope="row">
-                                    <td th:text="${location.id}"></td>
-                                    <td th:text="${location.name}"></td>
-                                    <td th:text="${location.county}"></td>
-                                    <td th:text="${location.district}"></td>
-                                    <td th:text="${location.address}"></td>
-                                    <!-- 											<td th:text="${location.phone}"></td> -->
-                                    <!-- 											<td th:text="${#strings.substring(location.openTime,0,5) + ' ~ ' + #strings.substring(location.closeTime,0,5)}"></td> -->
-                                    <td th:text="${location.carOptions.size()}"></td>
-                                    <td>
-                                        <div class="btn-group" role="group" aria-label="Basic example">
-                                            <a th:href="@{/vendor/cars/locations/detail/{id}(id=${location.id})}"
-                                               class="btn btn-light btn-rounded btn-sm">
-                                                <i class="fa fa-search" aria-hidden="true"></i>
-                                            </a>
-                                            <a th:href="@{/vendor/cars/locations/form/{id}(id=${location.id})}"
-                                               class="btn btn-light btn-rounded btn-sm">
-                                                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                            </a>
-                                            <form th:id="'deleteLocation' + ${location.id}"
-                                                  th:action="@{/vendor/cars/locations/}+${location.id}"
-                                                  th:method="delete" class="d-inline">
-                                                <button type="button" th:value="${location.id}"
-                                                        class="btn btn-delete btn-light btn-rounded btn-sm">
-                                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                                </button>
-                                            </form>
-                                        </div>
-                                    </td>
+                                <tr th:each="hotel:${hotel}" class="odd gradeX" scope="row">
+                                    <td th:text="${hotel.id}"></td>
+                                    <td th:text="${hotel.hotel_name}"></td>
+                                    <td th:text="${hotel.price}"></td>
+                                    <td th:text="${hotel.peopleCount}"></td>
+                                    <td th:text="${hotel.fullAddress}"></td>
+                                    <td th:text="${hotel.bedroomCount}"></td>
+                                    <td> 修改</td>
+                                    <td> 刪除</td>
+                                    <th>
+                                        <button class="btn1" th:href="@{/addHotelRoom}">新增房間</button>
+                                    </th>
                                 </tr>
                                 </tbody>
                             </table>
