--- a/src/main/resources/templates/frontend/ticket-detail.html
+++ b/src/main/resources/templates/frontend/ticket-detail.html
@@ -7,59 +7,18 @@
 	<meta charset="UTF-8">
 	<!-- 方案選擇css -->
 	<link rel="stylesheet" th:href="@{/css/ticketTableStyle/style_plan.css}" href="../../static/css/ticketTableStyle/style_plan.css" >
+	<!-- 圖片css -->
+	<link rel="stylesheet" th:href="@{/css/ticketTableStyle/jquery.skidder.css}" href="../../static/css/ticketTableStyle/jquery.skidder.css" >
 	<style type="text/css">
 
 	*{margin:0;padding:0;}
 	ul,li{list-style:none;}
-	.main{position:relative;margin:100px auto;width:1300px;overflow:hidden;}
+	.main{position:relative;margin:0px auto;width:1300px;overflow:hidden;}
 	.siderBar{float:left;width:25%;}
 	.siderBar li{margin-bottom:1px;padding:20px;line-height:50px;font-size:18px;background:#f0f0f0;cursor:pointer;transition:all .5s;}
 	.siderBar li.cur{color:#fff;background:#000;}
 	.content{float:right;width:70%;}
 	.content .item{padding:50px 0;font-size:50px;color:#fff;text-align:center;overflow:hidden;}
-	/* 上下滾動消息視窗 */
-	body {
-		position: relative;
-	}
-	*{
-		font-size: medium;
-	}
-	.box {
-		width: 900px;
-		height: 50px;
-		background-color: cadetblue;
-		position: relative;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		margin: auto;
-		overflow: hidden;
-		color: #fff;
-		border-radius: 5px;
-	}
-	.box ul {
-	position: absolute;
-	top: 0;
-	left: 0;
-	}
-	.box ul li {
-	line-height: 50px;
-	list-style: none;
-	padding: 0 30px;
-	box-sizing: border-box;
-	cursor: pointer;
-	}
-
-	#map {
-  	height: 100%;
-	}
-	html,
-	body {
- 	height: 100%;
-  	margin: 0;
-  	padding: 0;
-	}
 
 	/* announcement */
 	.huadong {
@@ -71,14 +30,14 @@
             font: 12px/1.5 "Hiragino Sans GB", "Microsoft YaHei", simsun;
             margin: 0 auto; */
 			width: 900px;
-			height: 50px;
-			background-color: rgb(159, 196, 198);
+			height: 40px;
+			background-color: rgb(184, 219, 221);
 			position: relative;
 			top: 0;
-			right: 600px;
+			right: 200px;
 			bottom: 0;
-			left: -200px;
-			margin: auto;
+			/* left: -200px; */
+			margin: 100px auto;
 			overflow: hidden;
 			color: #fff;
 			border-radius: 5px;
@@ -93,11 +52,13 @@
         .huadong .hdimg {
             float: left;
             line-height: 3.5rem;
+			/* right: 200px; */
         }
-
+		/* icon圖片 */
         .huadong .hdimg img {
             width: 100%;
-            vertical-align: middle;
+            /* vertical-align: middle; */
+			left:200px;
         }
 
         .huadong h5 {
@@ -132,12 +93,12 @@
         }
 
         /*.huadong .notice_active li.notice_active_ch {}*/
-        .huadong .notice_active li.notice_active_ch span {
+        .huadong .notice_active li.notice_active_ch span{
             color: #656972;
             font-size: 1rem;
             display: block;
             overflow: hidden;
-            width: 80%;
+            width: 100%;
             float: left;
             overflow: hidden;
             margin: 0 0 2rem 0;
@@ -168,8 +129,8 @@
             font-style: normal;
         }
 
+	
 	</style>
-
 <body>
 		
 	<!-- class="animsition" -->
@@ -195,19 +156,13 @@
 		</div>
 	</div>
 
-	<!-- Product Detail -->
+	<!-- Image -->
 	<section class="sec-product-detail bg0 p-t-40 p-b-45">
 		<div class="container">
 			<div class="row">
-				<!-- 地點、概述、方案選擇、商品評論(top5?)、商品說明、 -->
-				<!-- <div class="col-md-8">
-						<h3 class="mtext-111 cl5 font-weight-bold p-b-10">
-							Xpark都會型水生公園
-						</h3>
-					</div> -->
-
 				<!--原 圖片路徑位置 -->
 				<!-- 圖片路徑找位置中 -->
+				
 				<!-- <div class="slideshow" style="height: 0; margin-top:15px;overflow: hidden">
 					<div class="slide"><img th:src="@{/images/tickets/Xpark_1.jpg}"></div>
 					<div class="slide"><img th:src="@{/images/tickets/Xpark_2.jpg}"></div>
@@ -216,10 +171,11 @@
 					<div class="slide"><img th:src="@{/images/tickets/Xpark_5.jpg}"></div>
 					<div class="slide"><img th:src="@{/images/tickets/Xpark_6.jpg}"></div>
 				</div> -->
-
 				<div class="col-md-8 col-lg-8 p-b-30">
 					<div class="p-l-25 p-r-30 p-lr-0-lg">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+							<div class="p-l-25 p-r-30 p-lr-0-lg">
+							<!-- 圖片下方橫槓 -->
 							<ol class="carousel-indicators">
 								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -228,9 +184,10 @@
 								<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
 							</ol>
-
+							<!-- 圖片+左右換圖 -->
 							<div class="carousel-inner">
-								<div class="carousel-item active">
+								<!-- 圖片可轉換 class="carousel-item active" -->
+								 <div class="carousel-item active">
 									<img th:src="@{/images/tickets/Xpark_1.jpg}"  class="d-block w-100" alt="...">
 								</div>
 
@@ -240,9 +197,12 @@
 
 								<div class="carousel-item">
 									<img th:src="@{/images/tickets/Xpark_3.jpg}" class="d-block w-100" alt="...">
+								</div> -->
+								<div th:each="image:*{ticket.images}" class="carousel-item">
+									<img th:src="@{${image}}" class="d-block w-100" alt="..."/>
 								</div>
 
-								<div class="carousel-item">
+								<!-- <div class="carousel-item">
 									<img th:src="@{/images/tickets/Xpark_4.jpg}" class="d-block w-100" alt="...">
 								</div>
 
@@ -252,9 +212,10 @@
 
 								<div class="carousel-item">
 									<img th:src="@{/images/tickets/Xpark_6.jpg}" class="d-block w-100" alt="...">
-								</div>
+								</div> -->
 							</div>
 
+							<!-- 左右選擇換圖 -->
 							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
 								data-slide="prev">
 								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -267,7 +228,7 @@
 								<span class="sr-only">Next</span>
 							</a>
 						</div>
-						<div class="m-t-20 " data-ride="carousel">
+						<!-- <div class="m-t-20 " data-ride="carousel">
 							<button data-slide-to="0" class="active">
 								<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_1.jpg}"
 									alt="...">
@@ -281,14 +242,21 @@
 							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_5.jpg}"
 								alt="...">
 							<img class="m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_6.jpg}" alt="...">
-						</div>
+						</div> -->
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
 
-				<!-- 圖片右側bar -->
-				<div class="col-md-4 p-b-30">
+	<!-- 左側bar -->
+	<section class="sec-product-detail bg0 p-t-40 p-b-45">
+		<div class="container" style="width: 100%;">
+			<!-- <div class="row" style="position:absolute ;top: 900px;left: 200px;"> -->
+				<div class="col-md-7 p-b-25">
 					<div class="p-t-5">
 						<h4 class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14" th:text="${ticket.ticketName}"></h4>
+						<hr>
 						<div class="p-b-10">
 							<div id="rating-count">
 								<i class="fa fa-star cl1" aria-hidden="true"></i>
@@ -298,6 +266,7 @@
 								<i class="fa fa-star cl1" aria-hidden="true"></i>
 								<span id="rating">4.6</span> (<span id="count">56</span>則評論)
 							</div>
+							<hr>
 							<div class="p-t-20">
 								<a href="#" class="fa fa-map-marker" aria-hidden="true"  th:text="${ticket.city}"></a>
 								<a href="#"class="fa fa-map-marker" aria-hidden="true"  th:text="${ticket.location}"></a>
@@ -305,31 +274,38 @@
 								<!-- 桃園, 青埔 -->
 							</div>
 						</div>
+						<!-- 右側bar -->
 						<p class="stext-102 cl3 p-t-23" th:text="${ticket.ticketBriefIntro}">
 							<!-- 由日本橫濱八景島首度跨海來台桃園開設分館「Xpark」，Xpark
-							主打新都會型水族館，驅使最先端的科技，營造出環境的溫度、濕度、氣味、聲音，帶您到地球上每個不可思議的角落，受到啟發、感受療癒、洗滌心靈。 -->
+								主打新都會型水族館，驅使最先端的科技，營造出環境的溫度、濕度、氣味、聲音，帶您到地球上每個不可思議的角落，受到啟發、感受療癒、洗滌心靈。 -->
 						</p>						
-						<p class="mtext-106 cl2 p-t-30">
-							TWD $450
-						</p>
-						<div class=" p-t-33">
-							<div class="row m-b-10">
-								<div class="col-3">
-									<p class="d-flex justify-content-center p-t-8">
-										日期
-									</p>
-								</div>
-								<div class="col-9 respon6-next">
-									<div class="rs1-select2 bor8 bg0">
-										<input type="date" name="date" class="form-control">
-										<div class="dropDownSelect2"></div>
-									</div>
+						<!-- announcement -->
+						<div class="huadong" style="width: 105%;margin-left:26%; bottom: 400px;">
+							<div class="huabox">
+								<img th:src="@{/images/tickets/lingdang.png}" src="../../static/images/tickets/lingdang.png" style="width:auto;position:absolute;left: 10px;bottom: 12px;">
+								<div class="notice_active">
+									<ul>
+										<li class="notice_active_ch"><span>GoTrip解封玩暑假！大小朋友一起去溜撘~</span>
+										<li class="notice_active_ch"><span>暑假新體驗！親子同樂遊!熱門親子體驗！動手做～Fun心玩</span>
+										</li>
+									</ul>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+			<!-- </div> -->
+				<div class="col-md-4 p-b-30" style="margin-left:65%; height: 0px; bottom: 530px;">
+					<div class="p-t-5">
+						<span class="mtext-106 cl2 p-t-30">$</span>
+						<span class="mtext-106 cl2 p-t-30" th:text="${ticket.price}"></span>
+						<span style="display: inline"> TWD</span>
+						<div class=" p-t-33">
 							<div class="row p-b-10">
 								<div class="col-3">
-									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center">
-										人數
+									<!-- <p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center"> -->
+									<p class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14">
+										數量
 									</p>
 								</div>
 								<div class="col-9 ">
@@ -343,58 +319,80 @@
 											<i class="fs-16 zmdi zmdi-plus"></i>
 										</div>
 									</div>
-
 								</div>
 							</div>
-							<button
-								class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
-								加入購物車
-							</button>
+								<button
+									class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
+									加入購物車
+								</button>
 						</div>
 					</div>
 				</div>
-
-				<!-- announcement  -->
-
-			</div>
 		</div>
 	</section>
+	
+	<!-- 測試 -->
 
-	<!-- announcement -->
-	<div class="huadong">
-        <div class="huabox">
-            <div class="hdimg"><img th:src="@{/images/tickets/lingdang.png}" src="../../static/images/tickets/lingdang.png"></div>
-            <!-- <div class="hdimg"><img src="static/picture/lingdang.png"></div> -->
-            <!-- <h5>【公告】</h5> -->
-            <div class="notice_active">
-                <ul>
-                    <li class="notice_active_ch"><span>公告測試一</span>
-                    <li class="notice_active_ch"><span>公告測試二</span><em>2017-01-20</em></li>
-                    <!-- <li class="notice_active_ch"><span>站长素材文字滚动播放</span><em>2017-01-20</em></li> -->
-                </ul>
-            </div>
-        </div>
-    </div>
-
-	<!-- 方案選擇 -->
-	<div class="row">
-		<!-- <div class="col">
-		<h2>Open <b>multiple</b></h2>
-		<div class="tabs">
-			<div class="tab">
-			<input type="checkbox" id="chck1">
-			<label class="tab-label" for="chck1">Item 1</label>
-			<div class="tab-content"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis! </div>
-			</div>
-			<div class="tab">
-			<input type="checkbox" id="chck2">
-			<label class="tab-label" for="chck2">Item 2</label>
-			<div class="tab-content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in! </div>
+	<!-- 右側bar -->
+	<!-- <section>
+		<div class="container" style="width: 100%;">
+			<div class="row" style="position:absolute ;top: 900px;left: 1200px;">
+				<div class="col-md-4 p-b-30" style="margin-left:65%; height: 150px; bottom: 400px;">
+					<div class="p-t-5">
+						<p class="mtext-106 cl2 p-t-30" th:text="${ticket.price}">
+						</p>
+						<div class=" p-t-33">
+							<div class="row p-b-10">
+								<div class="col-3">
+									<p class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14">
+										數量
+									</p>
+								</div>
+								<div class="col-9 ">
+									<div class="wrap-num-product flex-w m-r-20 m-tb-10">
+										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-minus"></i>
+										</div>
+										<input class="mtext-104 cl3 txt-center num-product" type="number"
+											name="num-product" value="1">
+										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-plus"></i>
+										</div>
+									</div>
+								</div>
+							</div>
+								<button
+									class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
+									加入購物車
+								</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		</div> -->
+	</section> -->
+
+	<!-- announcement -->
+	<!-- <div class="container">
+	  <div class="huadong">
+        <div class="huabox">
+			<img th:src="@{/images/tickets/lingdang.png}" src="../../static/images/tickets/lingdang.png" style="width:auto;position:absolute;left: 10px;bottom: 12px;">
+            <div class="notice_active">
+                <ul>
+                    <li class="notice_active_ch"><span>GoTrip解封玩暑假！大小朋友一起去溜撘~</span>
+                    <li class="notice_active_ch"><span>暑假新體驗！親子同樂遊!熱門親子體驗！動手做～Fun心玩</span>
+					</li>
+                </ul>
+            </div>
+    	</div>
+       </div>
+    </div> -->
+
+	
+	<!-- 方案選擇 -->
+	<!-- <div class="row">
 		<div class="col">
-		<h2>方案選擇 <b></b></h2>
+		<h3>方案選擇 <b></b></h3>
 		<div class="tabs">
 			<div class="tab">
 			<input type="radio" id="rd1" name="rd">
@@ -406,16 +404,13 @@
 			<label class="tab-label" for="rd2">Item 2</label>
 			<div class="tab-content"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, aut. </div>
 			</div>
-			<!-- <div class="tab">
-			<input type="radio" id="rd3" name="rd">
-			<label for="rd3" class="tab-close">Close others &times;</label>
-			</div> -->
 		</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- sticky-bar -->
 	<main class="main">
+	  <div class="container">	
 		<div class="siderBar" style="float:right;">
 			<div class="menu">
 				<ul>
@@ -427,20 +422,24 @@
 				</ul>
 			</div>
 		</div>
-
+	  </div>
 		<div class="content" style="float:left;">
+			<!-- 商品說明 -->
 			<div id="s1" class="item" style="background:rgb(114, 114, 114);">
 				<p style="text-align: left;font-size: 2rem; position: relative;top: 0px; left: 50px; padding-right: 100px;">
-					景點套票簡介：
+					景點門票簡介：
 					<!-- <span th:text="${ticket.ticketIntro}"></span> -->
 				</p>
+				<hr>
 				<div id ='intro' style="text-align: left; font-size: 1.4rem; position: relative;top: 30px; left: 50px; padding-right: 100px;"></div>
 			</div>
+			<!-- 購買須知 -->
 			<div id="s2" class="item" style="background:#888;">
 				<p style="text-align: left;font-size: 2rem; position: relative;top: 0px; left: 50px; padding-right: 100px;">
 					購買須知：
 					<!-- <span th:text="${ticket.ticketIntro}"></span> -->
 				</p>
+				<hr>
 				<div style="text-align: left; font-size: 1.4rem; position: relative;top: 30px; left: 50px; padding-right: 100px;">
 					<p>&mdash; 重要資訊 &mdash;</p>
 
@@ -477,7 +476,9 @@
 					
 				</div>
 			</div>
+			<!-- Map -->
 			<div id="s3" class="item" style="background:#777;">預計放map</div>
+			<!-- 評論 -->
 			<div id="s4" class="item" style="background:#666;">
 				預計放商品評論
 			</div>
@@ -502,7 +503,7 @@
 	<!-- Google Map -->
 	<!-- <script async src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script> -->
 	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZCaVMqDRPK9FWi6p_yGx0iNbb7ATBLBw"></script> -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly" defer></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly" defer></script> -->
 	<!-- https://www.google.com/maps/embed/v1/place?key=AIzaSyCZCaVMqDRPK9FWi6p_yGx0iNbb7ATBLBw -->
 
 	<!-- 圖片JS -->
@@ -571,7 +572,7 @@
 	</script>
 
 	<!-- 圖片播放 -->
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		$('.slideshow').each( function() {
 			var $slideshow = $(this);
 			$slideshow.imagesLoaded( function() {
@@ -599,30 +600,10 @@
 				});
 			});
 		});
-		// $('.slideshow-nocycle').each( function() {
-		//   var $slideshow = $(this);
-		//   $slideshow.imagesLoaded( function() {
-		//     $slideshow.skidder({
-		//       slideClass    : '.slide',
-		//       scaleSlides   : true,
-		//       maxWidth : 1300,
-		//       maxHeight: 500,
-		//       leftaligned   : true,
-		//       cycle         : false,
-		//       paging        : true,
-		//       swiping       : true,
-		//       jumpback      : false,
-		//       speed         : 400,
-		//       autoplay      : false,
-		//       interval      : 4000,
-		//       afterSliding  : function() {}
-		//     });
-		//   });
-		// });
 		$(window).smartresize(function(){
 			$('.slideshow').skidder('resize');
 		});
-	</script>
+	</script> -->
 
 </body>
 
