--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -378,7 +378,7 @@
                                     height="250"
                                     frameborder="0"
                                     style="border:0"
-                                    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyADjpRo3888omouCJVj2WHZGNETKhZFMwU&q=101">
+                                    th:src="@{${'https://www.google.com/maps/embed/v1/place?key=AIzaSyADjpRo3888omouCJVj2WHZGNETKhZFMwU&q='+hotel.hotel_name}}">
                             </iframe>
                         </div>
                     </div>
