修正car delete、增加car 前端驗證

--- a/src/main/resources/static/css/util.css
+++ b/src/main/resources/static/css/util.css
@@ -17922,7 +17922,7 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ BACKGROUND ]*/
 .bgwhite {
-	background-color: white;
+	background-color: white !important;
 }
 
 .bgblack {
