--- a/src/main/resources/templates/frontend/car/vendor-opt-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-opt-form.html
@@ -19,25 +19,25 @@
 				<div class="col-md-3 p-b-80 bg6">
 					<div class="side-menu">
 						<div class="p-t-55">
-							<h2 class="ltext-103 cl5 font-weight-bold m-b-30">租車管理</h2>
-							<ul>
+							<h2 class="ltext-103 cl5 font-weight-bold m-b-30 p-lr-20">租車管理</h2>
+							<ul class="p-lr-20">
 								<li class="bor18">
-									<a th:href="@{#}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+									<a th:href="@{#}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
 										檢視訂單
 									</a>
 								</li>
 								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations/1}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+									<a th:href="@{/vendor/cars/locations}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
 										地點與車款列表
 									</a>
 								</li>
 								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+									<a th:href="@{/vendor/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
 										新增地點
 									</a>
 								</li>
 								<li class="bor18">
-									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
 										新增車款
 									</a>
 								</li>
@@ -50,9 +50,9 @@
 					<div class="card">
 						<div class="card-body ">
 						
-							<h4 class="card-title font-weight-bold">租車選項</h4>
+							<h4 class="card-title font-weight-bold my-3">租車選項</h4>
 							
-							<form id="insertForm" name="form" th:action="@{/vendor/cars/options}" method="post" th:object="${carLocation}"
+							<form id="insert-opt-form" name="form" th:action="@{/vendor/cars/options}" method="post" th:object="${carLocation}"
 								  class="form-horizontal needs-validation">
 								  
 								<input th:field="*{id}" id="id" type="hidden"/>
@@ -64,28 +64,67 @@
 									<!-- 隱藏的方案與車款id -->
 									<input th:field="*{carOptions[__${optionStat.index}__].id}" id="name" type="hidden" class="form-control" />
 									<input th:field="*{carOptions[__${optionStat.index}__].carModel.id}" id="name" type="hidden" class="form-control" />
+										
+									
+<!-- 									<div class="row form-group my-4"> -->
+<!-- 										<div class="col-lg-1"></div> -->
+<!-- 										<label class="col-lg-2 col-form-label" for="name">車款</label> -->
+<!-- 										<div class="col-lg-6"> -->
+<!-- 											<span th:text="*{carOptions[__${optionStat.index}__].carModel.makeCh}" id="name"></span> -->
+<!-- 											<span th:text="*{carOptions[__${optionStat.index}__].carModel.makeEn}" id="name"></span> -->
+<!-- 											<span th:text="*{carOptions[__${optionStat.index}__].carModel.model}" id="name"></span> -->
+<!-- 											<div class="invalid-feedback">請選擇車款</div> -->
+<!-- 										</div> -->
+<!-- 									</div> -->
 
-									
 									<div class="row form-group my-4">
-										<div class="col-lg-1"></div>
-										<label class="col-lg-2 col-form-label" for="name">車款</label>
-										<div class="col-lg-6">
-											<span th:text="*{carOptions[__${optionStat.index}__].carModel.makeCh}" id="name"></span>
-											<span th:text="*{carOptions[__${optionStat.index}__].carModel.makeEn}" id="name"></span>
-											<span th:text="*{carOptions[__${optionStat.index}__].carModel.model}" id="name"></span>
-											<div class="invalid-feedback">請選擇車款</div>
+										<div class="col-lg-3"></div>
+										<div class="col-lg-2">
+											<img th:src="@{*{carOptions[__${optionStat.index}__].carModel.image}}">
+										</div>
+										<div class="col-lg-2">
+<!-- 											<p th:text="*{carOptions[__${optionStat.index}__].carModel.image}"> -->
 										</div>
 									</div>
 									
 									<div class="row form-group my-4">
 										<div class="col-lg-1"></div>
 										<label class="col-lg-2 col-form-label" for="name">車款</label>
-										<div class="col-lg-6">
-											<input th:field="*{carOptions[__${optionStat.index}__].carModel.makeEn}" id="name" type="text" class="form-control" />
-											<input th:field="*{carOptions[__${optionStat.index}__].carModel.model}" id="name" type="text" class="form-control" />
+										<div class="col-lg-7">
+<!-- 											<div class="row"> -->
+												<div class="pr-0">
+													<input th:value="*{carOptions[__${optionStat.index}__].carModel.makeCh + '  ' + carOptions[__${optionStat.index}__].carModel.makeEn + '  ' + 
+													carOptions[__${optionStat.index}__].carModel.model}" name="makeCh" type="text" class="form-control" readonly/>
+												</div>
+<!-- 												<div class="col-sm-4 pr-0"> -->
+<!-- 													<input th:field="*{}" name="makeEn" type="text" class="form-control" readonly/> -->
+<!-- 												</div> -->
+<!-- 												<div class="col-sm-4"> -->
+<!-- 													<input th:field="*{carOptions[__${optionStat.index}__].carModel.model}" name="model" type="text" class="form-control" readonly/> -->
+<!-- 												</div> -->
+<!-- 											</div> -->
 											<div class="invalid-feedback">請選擇車款</div>
 										</div>
 									</div>
+									
+<!-- 									<div class="row form-group my-4"> -->
+<!-- 										<div class="col-lg-1"></div> -->
+<!-- 										<label class="col-lg-2 col-form-label" for="name">車款</label> -->
+<!-- 										<div class="col-lg-6"> -->
+<!-- 											<div class="row"> -->
+<!-- 												<div class="col-sm-4 pr-0"> -->
+<!-- 													<input th:field="*{carOptions[__${optionStat.index}__].carModel.makeCh}" name="makeCh" type="text" class="form-control" readonly/> -->
+<!-- 												</div> -->
+<!-- 												<div class="col-sm-4 pr-0"> -->
+<!-- 													<input th:field="*{carOptions[__${optionStat.index}__].carModel.makeEn}" name="makeEn" type="text" class="form-control" readonly/> -->
+<!-- 												</div> -->
+<!-- 												<div class="col-sm-4"> -->
+<!-- 													<input th:field="*{carOptions[__${optionStat.index}__].carModel.model}" name="model" type="text" class="form-control" readonly/> -->
+<!-- 												</div> -->
+<!-- 											</div> -->
+<!-- 											<div class="invalid-feedback">請選擇車款</div> -->
+<!-- 										</div> -->
+<!-- 									</div> -->
 									
 									<div class="row form-group my-4">
 										<div class="col-lg-1"></div>
@@ -122,10 +161,13 @@
 <!-- 										<div class="invalid-feedback">請輸入營業時間</div> -->
 <!-- 									</div> -->
 <!-- 								</div> -->
-								
+								<select name="carModel" class="form-control">
+									<option value="0">select option</option>
+									<option th:each="carModel : ${carModels}" th:value="${carModel.id}" th:text="${carModel.makeCh + carModel.makeEn + carModel.model}"></option>
+								</select>
 								
 								<div class="d-flex justify-content-end">
-									<button id="btn-insert" type="submit" class="btn btn-warning mr-2 justify-content-end mr-4">
+									<button id="btn-insert-opts" type="submit" class="btn btn-warning mr-2 justify-content-end mr-4">
 										儲存資料
 									</button>
 								</div>
@@ -193,6 +235,24 @@
 			$('.district').val($('#district').text())
 			$('.district').blur()
 		})
+		
+		
+		$(".btn-insert-opts").click(function(e){
+			e.preventDefault();
+			Swal.fire({
+				icon: 'success',
+				title: '儲存成功',
+				text: "即將為您導回地點列表",
+				showConfirmButton: false,
+				timer: 1500
+			});
+
+			setInterval(function() {
+				$('#insert-opt-form').submit()
+			}, 1500);
+		})
+		
+	
 	</script>
 
 </body>
