--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -114,7 +114,7 @@
                             <li><a th:href="@{/backend/index}">後台管理</a></li>
                             <li><a th:href="@{/vendor/tickets}">景點商家管理</a></li>
                             <li><a th:href="@{/vendor/hotels}">飯店商家管理</a></li>
-                            <li><a th:href="@{/vendor/cars/locations/1}">租車商家管理</a></li>
+                            <li><a th:href="@{/vendor/cars/locations}">租車商家管理</a></li>
                         </ul>
                     </div>
                 </div>
@@ -856,7 +856,8 @@
     <script th:src="@{/vendors/MagnificPopup/jquery.magnific-popup.min.js}"
             src="vendors/MagnificPopup/jquery.magnific-popup.min.js"></script>
     <script th:src="@{/vendors/isotope/isotope.pkgd.min.js}" src="vendors/isotope/isotope.pkgd.min.js"></script>
-    <script th:src="@{/vendors/sweetalert/sweetalert.min.js}" src="vendors/sweetalert/sweetalert.min.js"></script>
+<!--     <script th:src="@{/vendors/sweetalert/sweetalert.min.js}" src="vendors/sweetalert/sweetalert.min.js"></script> -->
+    <script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
     <script th:src="@{/vendors/perfect-scrollbar/perfect-scrollbar.min.js}"
             src="vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script th:src="@{/js/main.js}" src="js/main.js"></script>
