拉回Hotel, car 7/17晚上資料

--- a/src/main/resources/templates/frontend/car/vendor-opt-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-opt-form.html
@@ -83,10 +83,7 @@
 											<img th:src="@{*{carOptions[__${optionStat.index}__].carModel.image}}">
 										</div>
 										<div class="col-lg-2">
-											<i class="zmdi zmdi-flash"></i> <span th:text="*{carOptions[__${optionStat.index}__].carModel.power}" class="p-r-15"></span>
-											<i class="zmdi zmdi-wb-auto"></i> 變速 <span th:text="*{carOptions[__${optionStat.index}__].carModel.transmission}" class="p-r-15"></span>
-											<i class="zmdi zmdi-airline-seat-recline-extra"></i> 座位 <span th:text="*{carOptions[__${optionStat.index}__].carModel.seat}" class="p-r-15"></span>
-											<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="*{carOptions[__${optionStat.index}__].carModel.engine}" class="p-r-5"></span>
+<!-- 											<p th:text="*{carOptions[__${optionStat.index}__].carModel.image}"> -->
 										</div>
 									</div>
 									
