--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -374,11 +374,11 @@
                         <div class="m-t-10 p-xl-3  ">
                             <h1>Google Map</h1>
                             <iframe id="iframe" name="iframe"
-                                    width="400"
-                                    height="250"
+                                    width="350"
+                                    height="400"
                                     frameborder="0"
                                     style="border:0"
-                                    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyADjpRo3888omouCJVj2WHZGNETKhZFMwU&q=101">
+                                    th:src="@{${'https://www.google.com/maps/embed/v1/place?key=AIzaSyADjpRo3888omouCJVj2WHZGNETKhZFMwU&q='+hotel.hotel_name}}">
                             </iframe>
                         </div>
                     </div>
